Update on Overleaf.

--- a/biblio.bib
+++ b/biblio.bib
@@ -633,3 +633,239 @@
 	month = sep,
 	year = {2013}
 }
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%Lars Sources%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@article{Albert2003,
+abstract = {Expression of the Drosophila segment polarity genes is initiated by a pre-pattern of pair-rule gene products and maintained by a network of regulatory interactions throughout several stages of embryonic development. Analysis of a model of gene interactions based on differential equations showed that wild-type expression patterns of these genes can be obtained for a wide range of kinetic parameters, which suggests that the steady states are determined by the topology of the network and the type of regulatory interactions between components, not the detailed form of the rate laws. To investigate this, we propose and analyse a Boolean model of this network which is based on a binary ON/OFF representation of mRNA and protein levels, and in which the interactions are formulated as logical functions. In this model the spatial and temporal patterns of gene expression are determined by the topology of the network and whether components are present or absent, rather than the absolute levels of the mRNAs and proteins and the functional details of their interactions. The model is able to reproduce the wild-type gene expression patterns, as well as the ectopic expression patterns observed in overexpression experiments and various mutants. Furthermore, we compute explicitly all steady states of the network and identify the basin of attraction of each steady state. The model gives important insights into the functioning of the segment polarity gene network, such as the crucial role of the wingless and sloppy paired genes, and the network's ability to correct errors in the pre-pattern. ?? 2003 Elsevier Science Ltd. All rights reserved.},
+archivePrefix = {arXiv},
+arxivId = {arXiv:q-bio/0311019v1},
+author = {Albert, R??ka and Othmer, Hans G.},
+doi = {10.1016/S0022-5193(03)00035-3},
+eprint = {0311019v1},
+file = {:Users/hubatsl/Documents/Mendeley/2003/Journal of Theoretical Biology{\_}The topology of the regulatory interactions predicts the expression pattern of the segment polarity genes.pdf:pdf},
+isbn = {0022-5193 (Print)$\backslash$r0022-5193 (Linking)},
+issn = {00225193},
+journal = {Journal of Theoretical Biology},
+keywords = {Boolean model,Drosophila segmentation,Gene regulatory network,Segment polarity genes},
+number = {1},
+pages = {1--18},
+pmid = {12782112},
+primaryClass = {arXiv:q-bio},
+title = {{The topology of the regulatory interactions predicts the expression pattern of the segment polarity genes in Drosophila melanogaster}},
+volume = {223},
+year = {2003}
+}
+@article{Yamada2007,
+abstract = {Three-dimensional (3D) in vitro models span the gap between two-dimensional cell cultures and whole-animal systems. By mimicking features of the in vivo environment and taking advantage of the same tools used to study cells in traditional cell culture, 3D models provide unique perspectives on the behavior of stem cells, developing tissues and organs, and tumors. These models may help to accelerate translational research in cancer biology and tissue engineering. ?? 2007 Elsevier Inc. All rights reserved.},
+author = {Yamada, Kenneth M. and Cukierman, Edna},
+doi = {10.1016/j.cell.2007.08.006},
+file = {:Users/hubatsl/Documents/Mendeley/2007/Cell{\_}Modeling Tissue Morphogenesis and Cancer in 3D.pdf:pdf},
+isbn = {0092-8674 (Print)$\backslash$n0092-8674 (Linking)},
+issn = {00928674},
+journal = {Cell},
+number = {4},
+pages = {601--610},
+pmid = {17719539},
+title = {{Modeling Tissue Morphogenesis and Cancer in 3D}},
+volume = {130},
+year = {2007}
+}
+@article{Jaeger2009,
+annote = {Jaeger, Johannes
+Martinez-Arias, Alfonso
+eng
+2009/04/03 09:00
+PLoS Biol. 2009 Mar 31;7(3):e81. doi: 10.1371/journal.pbio.1000081.},
+author = {Jaeger, J and Martinez-Arias, A},
+doi = {10.1371/journal.pbio.1000081},
+file = {:Users/hubatsl/Documents/Mendeley/2009/PLoS Biol{\_}Getting the measure of positional information.pdf:pdf},
+isbn = {1545-7885 (Electronic)
+1544-9173 (Linking)},
+journal = {PLoS Biol},
+keywords = {*DNA-Binding Proteins/genetics/metabolism,*Drosophila Proteins/genetics/metabolism,*Drosophila melanogaster/growth {\&} development/phys,*Gene Expression Regulation, Developmental,*Homeodomain Proteins/genetics/metabolism,*Trans-Activators/genetics/metabolism,*Transcription Factors/genetics/metabolism,Animals,Body Patterning/*physiology,Cell Differentiation,Models, Biological,Proteins,r00446},
+language = {English},
+mendeley-tags = {r00446},
+number = {3},
+pages = {e81},
+pmid = {19338391},
+title = {{Getting the measure of positional information}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/19338391 http://www.ncbi.nlm.nih.gov/pmc/articles/PMC2661971/pdf/pbio.1000081.pdf},
+volume = {7},
+year = {2009}
+}
+@article{Mammoto2010a,
+abstract = {Many genes and molecules that drive tissue patterning during organogenesis and tissue regeneration have been discovered. Yet, we still lack a full understanding of how these chemical cues induce the formation of living tissues with their unique shapes and material properties. Here, we review work based on the convergence of physics, engineering and biology that suggests that mechanical forces generated by living cells are as crucial as genes and chemical signals for the control of embryological development, morphogenesis and tissue patterning.},
+author = {Mammoto, Tadanori and Ingber, Donald E},
+doi = {10.1242/dev.024166},
+file = {:Users/hubatsl/Documents/Mendeley/2010/Development{\_}Mechanical control of tissue and organ development.pdf:pdf},
+isbn = {1477-9129 (Electronic)$\backslash$r0950-1991 (Linking)},
+issn = {1477-9129},
+journal = {Development},
+keywords = {cytoskeleton,gene expression so that,in intracellular biochemistry and,into changes,mechanical signaling,mechanical signals are converted,morphogenesis,pattern formation,tension,they,we also explore how},
+number = {9},
+pages = {1407--1420},
+pmid = {20388652},
+title = {{Mechanical control of tissue and organ development.}},
+volume = {137},
+year = {2010}
+}
+@article{Kondo2010a,
+abstract = {The Turing, or reaction-diffusion (RD), model is one of the best-known theoretical models used to explain self-regulated pattern formation in the developing animal embryo. Although its real-world relevance was long debated, a number of compelling examples have gradually alleviated much of the skepticism surrounding the model. The RD model can generate a wide variety of spatial patterns, and mathematical studies have revealed the kinds of interactions required for each, giving this model the potential for application as an experimental working hypothesis in a wide variety of morphological phenomena. In this review, we describe the essence of this theory for experimental biologists unfamiliar with the model, using examples from experimental studies in which the RD model is effectively incorporated.},
+author = {Kondo, Shigeru and Miura, Takashi},
+doi = {10.1126/science.1179047},
+file = {:Users/hubatsl/Documents/Mendeley/2010/Science{\_}Reaction-Diffusion Model as a Framework for Understanding Biological Pattern Formation.pdf:pdf},
+isbn = {1095-9203 (Electronic)$\backslash$r0036-8075 (Linking)},
+issn = {1095-9203},
+journal = {Science},
+keywords = {Animals,Biological,Body Patterning,Computer Simulation,Diffusion,Embryonic Development,Feedback,Intercellular Signaling Peptides and Proteins,Intercellular Signaling Peptides and Proteins: met,Ligands,Mathematical Concepts,Models,Morphogenesis,Physiological,Pigmentation,Theoretical},
+number = {5999},
+pages = {1616--1620},
+pmid = {20929839},
+title = {{Reaction-Diffusion Model as a Framework for Understanding Biological Pattern Formation}},
+url = {http://www.sciencemag.org/cgi/doi/10.1126/science.1179047},
+volume = {329},
+year = {2010}
+}
+@article{Lander2011,
+abstract = {Systems biology seeks not only to discover the machinery of life but to understand how such machinery is used for control, i.e., for regulation that achieves or maintains a desired, useful end. This sort of goal-directed, engineering-centered approach also has deep historical roots in developmental biology. Not surprisingly, developmental biology is currently enjoying an influx of ideas and methods from systems biology. This Review highlights current efforts to elucidate design principles underlying the engineering objectives of robustness, precision, and scaling as they relate to the developmental control of growth and pattern formation. Examples from vertebrate and invertebrate development are used to illustrate general lessons, including the value of integral feedback in achieving set-point control; the usefulness of self-organizing behavior; the importance of recognizing and appropriately handling noise; and the absence of "free lunch." By illuminating such principles, systems biology is helping to create a functional framework within which to make sense of the mechanistic complexity of organismal development.},
+annote = {Lander, Arthur D
+eng
+P50 GM076516/GM/NIGMS NIH HHS/
+P50 GM076516-04/GM/NIGMS NIH HHS/
+P50-GM076516/GM/NIGMS NIH HHS/
+R01 GM067247/GM/NIGMS NIH HHS/
+R01-GM067247/GM/NIGMS NIH HHS/
+Research Support, N.I.H., Extramural
+Review
+2011/03/19 06:00
+Cell. 2011 Mar 18;144(6):955-69. doi: 10.1016/j.cell.2011.03.009.},
+author = {Lander, A D},
+doi = {10.1016/j.cell.2011.03.009},
+file = {:Users/hubatsl/Documents/Mendeley/2011/Cell{\_}Pattern, growth, and control.pdf:pdf},
+isbn = {1097-4172 (Electronic)
+0092-8674 (Linking)},
+journal = {Cell},
+keywords = {Animals,Developmental Biology/*methods,Drosophila/growth {\&} development,Invertebrates/*growth {\&} development,Morphogenesis,Systems Biology/*methods,Vertebrates/*growth {\&} development,r00256},
+language = {English},
+mendeley-tags = {r00256},
+number = {6},
+pages = {955--969},
+pmid = {21414486},
+title = {{Pattern, growth, and control}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/21414486 http://ac.els-cdn.com/S0092867411002467/1-s2.0-S0092867411002467-main.pdf?{\_}tid=9ad05060-a8b8-11e5-9069-00000aacb35e{\&}acdnat=1450794833{\_}64ea1ac2c4a2f317cd1a143f2c2c5adb},
+volume = {144},
+year = {2011}
+}
+@article{Heisenberg2013,
+abstract = {During development, mechanical forces cause changes in size, shape, number, position, and gene expression of cells. They are therefore integral to any morphogenetic processes. Force generation by actin-myosin networks and force transmission through adhesive complexes are two self-organizing phenomena driving tissue morphogenesis. Coordination and integration of forces by long-range force transmission and mechanosensing of cells within tissues produce large-scale tissue shape changes. Extrinsic mechanical forces also control tissue patterning by modulating cell fate specification and differentiation. Thus, the interplay between tissue mechanics and biochemical signaling orchestrates tissue morphogenesis and patterning in development. {\textcopyright} 2013 Elsevier Inc.},
+author = {Heisenberg, Carl Philipp and Bella{\"{i}}che, Yohanns},
+doi = {10.1016/j.cell.2013.05.008},
+file = {:Users/hubatsl/Documents/Mendeley/2013/Cell{\_}Forces in tissue morphogenesis and patterning.pdf:pdf},
+isbn = {0092-8674},
+issn = {00928674},
+journal = {Cell},
+number = {5},
+pmid = {23706734},
+title = {{Forces in tissue morphogenesis and patterning}},
+volume = {153},
+year = {2013}
+}
+@article{Guillot2013,
+author = {Guillot, C. and Lencuit, T.},
+doi = {10.1126/science.1235249},
+file = {:Users/hubatsl/Documents/Mendeley/2013/Science{\_}Mechanics of Epithelial Tissue.pdf:pdf},
+isbn = {1095-9203 (Electronic)$\backslash$n0036-8075 (Linking)},
+issn = {1095-9203},
+journal = {Science},
+number = {June},
+pages = {1185--1189},
+pmid = {23744939},
+title = {{Mechanics of Epithelial Tissue}},
+volume = {340},
+year = {2013}
+}
+@article{Sato2013,
+abstract = {Recent examples have highlighted how stem cells have the capability to initiate morphogenesis in vitro; that is, to generate complex structures in culture that closely parallel their in vivo counterparts. Lgr5, the receptor for the Wnt-agonistic R-spondins, marks stem cells in multiple adult organs of mice and humans. In R-spondin–based three-dimensional cultures, these Lgr5 stem cells can grow into ever-expanding epithelial organoids that retain their original organ identity. Single Lgr5 stem cells derived from the intestine can be cultured to build epithelial structures that retain hallmarks of the in vivo epithelium. Here, we review the mechanisms that support this notable example of self-organization and discuss applications of this technology for stem cell research, disease modeling (e.g., for colorectal cancer and cystic fibrosis), and regenerative medicine.},
+archivePrefix = {arXiv},
+arxivId = {arXiv:1011.1669v3},
+author = {Sato, Toshiro and Clevers, Hans and van der Flier, L. G. and Clevers, H. and Cheng, H. and Leblond, C. P. and Barker, N. and Potten, C. S. and Sangiorgi, E. and Capecchi, M. R. and Takeda, N. and Montgomery, R. K. and Powell, A. E. and Buczacki, S. J. and Snippert, H. J. and Lopez-Garcia, C. and Klein, A. M. and Simons, B. D. and Winton, D. J. and Korinek, V. and Farin, H. F. and Es, J. H. Van and Clevers, H. and van Es, J. H. and Pellegrinet, L. and van Es, J. H. and Wong, V. W. and Haramis, A. P. and Sato, T. and Geiser, J. and Venken, K. J. and Lisle, R. C. De and Andrews, G. K. and Kim, T. H. and Escudero, S. and Shivdasani, R. A. and Durand, A. and Hayflick, L. and Sato, T. and Carmon, K. S. and Lin, Q. and Gong, X. and Thomas, A. and Liu, Q. and de Lau, W. and Mustata, R. C. and Kim, K. A. and Spence, J. R. and Ootani, A. and Yilmaz, O. H. and Yui, S. and Batlle, E. and van Es, J. H. and Koo, B. K. and Hao, H. X. and Gracz, A. D. and Ramalingam, S. and Magness, S. T. and von Furstenberg, R. J. and Yan, K. S. and Tian, H. and Roth, S. and Koo, B.-K. and Ruffner, H. and Sodhi, C. P. and Fafilek, B. and Barry, E. R. and Mizutani, T. and VanDussen, K. L. and de Lau, W. and Miyoshi, H. and Stappenbeck, T. S. and Schepers, A. G. and Schwitalla, S. and Sato, T. and Jung, P. and Liu, J. and Walker, N. M. and Cook, M. T. and Ootani, A. and Clarke, L. L. and Dekkers, J. F. and Ledford, H.},
+doi = {10.1126/science.1234852},
+eprint = {arXiv:1011.1669v3},
+file = {:Users/hubatsl/Documents/Mendeley/2013/Science{\_}Growing Self-Organizing Mini-Guts from a Single Intestinal Stem Cell Mechanism and Applications.pdf:pdf},
+isbn = {9788578110796},
+issn = {0036-8075},
+journal = {Science},
+number = {6137},
+pages = {241--260},
+pmid = {23744940},
+title = {{Growing Self-Organizing Mini-Guts from a Single Intestinal Stem Cell: Mechanism and Applications}},
+volume = {340},
+year = {2013}
+}
+@article{Fletcher2014a,
+abstract = {The dynamic behavior of epithelial cell sheets plays a central role during numerous developmental processes. Genetic and imaging studies of epithelial morphogenesis in a wide range of organisms have led to increasingly detailed mechanisms of cell sheet dynamics. Computational models offer a useful means by which to investigate and test these mechanisms, and have played a key role in the study of cell-cell interactions. A variety of modeling approaches can be used to simulate the balance of forces within an epithelial sheet. Vertex models are a class of such models that consider cells as individual objects, approximated by two-dimensional polygons representing cellular interfaces, in which each vertex moves in response to forces due to growth, interfacial tension, and pressure within each cell. Vertex models are used to study cellular processes within epithelia, including cell motility, adhesion, mitosis, and delamination. This review summarizes how vertex models have been used to provide insight into developmental processes and highlights current challenges in this area, including progressing these models from two to three dimensions and developing new tools for model validation. ?? 2014 Biophysical Society.},
+author = {Fletcher, Alexander G. and Osterfield, Miriam and Baker, Ruth E. and Shvartsman, Stanislav Y.},
+doi = {10.1016/j.bpj.2013.11.4498},
+file = {:Users/hubatsl/Documents/Mendeley/2014/Biophysical Journal{\_}Vertex models of epithelial morphogenesis.pdf:pdf},
+isbn = {1542-0086 (Electronic)$\backslash$r0006-3495 (Linking)},
+issn = {15420086},
+journal = {Biophysical Journal},
+number = {11},
+pages = {2291--2304},
+pmid = {24896108},
+publisher = {Biophysical Society},
+title = {{Vertex models of epithelial morphogenesis}},
+url = {http://dx.doi.org/10.1016/j.bpj.2013.11.4498},
+volume = {106},
+year = {2014}
+}
+@article{Martin2014a,
+abstract = {Apical constriction is a cell shape change that promotes tissue remodeling in a variety of homeostatic and developmental contexts, including gastrulation in many organisms and neural tube formation in vertebrates. In recent years, progress has been made towards understanding how the distinct cell biological processes that together drive apical constriction are coordinated. These processes include the contraction of actin-myosin networks, which generates force, and the attachment of actin networks to cell-cell junctions, which allows forces to be transmitted between cells. Different cell types regulate contractility and adhesion in unique ways, resulting in apical constriction with varying dynamics and subcellular organizations, as well as a variety of resulting tissue shape changes. Understanding both the common themes and the variations in apical constriction mechanisms promises to provide insight into the mechanics that underlie tissue morphogenesis.},
+author = {Martin, Adam C and Goldstein, Bob},
+doi = {10.1242/dev.102228},
+file = {:Users/hubatsl/Documents/Mendeley/2014/Development{\_}Apical constriction themes and variations on a cellular mechanism driving morphogenesis.pdf:pdf},
+isbn = {1477-9129 (Electronic)$\backslash$n0950-1991 (Linking)},
+issn = {1477-9129},
+journal = {Development},
+keywords = {actin,adhesion,apical,cadherin,constriction},
+number = {10},
+pages = {1987--1998},
+pmid = {24803648},
+title = {{Apical constriction: themes and variations on a cellular mechanism driving morphogenesis.}},
+url = {http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed{\&}id=24803648{\&}retmode=ref{\&}cmd=prlinks{\%}5Cnpapers3://publication/doi/10.1242/dev.102228},
+volume = {141},
+year = {2014}
+}
+@article{Cerchiari2015,
+abstract = {Developing tissues contain motile populations of cells that can self-organize into spatially ordered tissues based on differences in their interfacial surface energies. However, it is unclear how self-organization by this mechanism remains robust when interfacial energies become heterogeneous in either time or space. The ducts and acini of the human mammary gland are prototypical heterogeneous and dynamic tissues comprising two concentrically arranged cell types. To investigate the consequences of cellular heterogeneity and plasticity on cell positioning in the mammary gland, we reconstituted its self-organization from aggregates of primary cells in vitro. We find that self-organization is dominated by the interfacial energy of the tissue-ECM boundary, rather than by differential homo- and heterotypic energies of cell-cell interaction. Surprisingly, interactions with the tissue-ECM boundary are binary, in that only one cell type interacts appreciably with the boundary. Using mathematical modeling and cell-type-specific knockdown of key regulators of cell-cell cohesion, we show that this strategy of self-organization is robust to severe perturbations affecting cell-cell contact formation. We also find that this mechanism of self-organization is conserved in the human prostate. Therefore, a binary interfacial interaction with the tissue boundary provides a flexible and generalizable strategy for forming and maintaining the structure of two-component tissues that exhibit abundant heterogeneity and plasticity. Our model also predicts that mutations affecting binary cell-ECM interactions are catastrophic and could contribute to loss of tissue architecture in diseases such as breast cancer.},
+author = {Cerchiari, Alec E and Garbe, James C and Jee, Noel Y and Todhunter, Michael E and Broaders, Kyle E and Peehl, Donna M and Desai, Tejal A and LaBarge, Mark A and Thomson, Matthew and Gartner, Zev J},
+doi = {10.1073/pnas.1410776112},
+file = {:Users/hubatsl/Documents/Mendeley/2015/Proceedings of the National Academy of Sciences of the United States of America{\_}A strategy for tissue self-organization that is robust t.pdf:pdf},
+issn = {1091-6490},
+journal = {Proceedings of the National Academy of Sciences of the United States of America},
+keywords = {Cell Communication,Epithelial Cells,Epithelial Cells: cytology,Extracellular Matrix,Humans,Mammary Glands, Human,Mammary Glands, Human: cytology},
+number = {7},
+pages = {2287--92},
+pmid = {25633040},
+title = {{A strategy for tissue self-organization that is robust to cellular heterogeneity and plasticity.}},
+url = {http://www.pnas.org/content/112/7/2287.long},
+volume = {112},
+year = {2015}
+}
+@article{Han2016,
+abstract = {Many organs are composed of complex tissue walls that are structurally organized to optimize organ function. In particular, the ventricular myocardial wall of the heart comprises an outer compact layer that concentrically encircles the ridge-like inner trabecular layer. Although disruption in the morphogenesis of this myocardial wall can lead to various forms of congenital heart disease and non-compaction cardiomyopathies, it remains unclear how embryonic cardiomyocytes assemble to form ventricular wall layers of appropriate spatial dimensions and myocardial mass. Here we use advanced genetic and imaging tools in zebrafish to reveal an interplay between myocardial Notch and Erbb2 signalling that directs the spatial allocation of myocardial cells to their proper morphological positions in the ventricular wall. Although previous studies have shown that endocardial Notch signalling non-cell-autonomously promotes myocardial trabeculation through Erbb2 and bone morphogenetic protein (BMP) signalling, we discover that distinct ventricular cardiomyocyte clusters exhibit myocardial Notch activity that cell-autonomously inhibits Erbb2 signalling and prevents cardiomyocyte sprouting and trabeculation. Myocardial-specific Notch inactivation leads to ventricles of reduced size and increased wall thickness because of excessive trabeculae, whereas widespread myocardial Notch activity results in ventricles of increased size with a single-cell-thick wall but no trabeculae. Notably, this myocardial Notch signalling is activated non-cell-autonomously by neighbouring Erbb2-activated cardiomyocytes that sprout and form nascent trabeculae. Thus, these findings support an interactive cellular feedback process that guides the assembly of cardiomyocytes to morphologically create the ventricular myocardial wall and more broadly provide insight into the cellular dynamics of how diverse cell lineages organize to create form.},
+author = {Han, Peidong and Bloomekatz, Joshua and Ren, Jie and Zhang, Ruilin and Grinstein, Jonathan D. and Zhao, Long and Burns, C. Geoffrey and Burns, Caroline E. and Anderson, Ryan M. and Chi, Neil C.},
+doi = {10.1038/nature18310},
+file = {:Users/hubatsl/Documents/Mendeley/2016/Nature{\_}Coordinating cardiomyocyte interactions to direct ventricular chamber morphogenesis.pdf:pdf},
+issn = {0028-0836},
+journal = {Nature},
+number = {7609},
+pages = {700--704},
+pmid = {27357797},
+publisher = {Nature Publishing Group},
+title = {{Coordinating cardiomyocyte interactions to direct ventricular chamber morphogenesis}},
+url = {http://www.nature.com/doifinder/10.1038/nature18310},
+volume = {534},
+year = {2016}
+}
+%%%%%%%%%%%%%%%%%%%%%%%%%%END Lars Sources%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
